# works-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
skills/works-cli/: SKILL.md
src/works_cli/: _cli_utils.py  cli.py  client.py  config.py  output.py
src/works_cli/commands/: bot.py  cal.py  mail.py  note.py  task.py  user.py
tests/: conftest.py  test_bot.py  test_cal.py  test_cli_config.py  test_client.py  test_config.py  test_mail.py  test_note.py  test_task.py  test_user.py
