[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "works-cli"
version = "0.1.0"
description = "PAT-based CLI for NAVER WORKS APIs (mail, calendar, bot)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Kangho Noh" }]
keywords = ["naver", "works", "cli", "pat", "mail", "calendar", "bot"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "pytest-cov>=5",
]

[project.scripts]
works-cli = "works_cli.cli:main"

[project.urls]
Homepage = "https://github.com/kangho-Noh/works-cli"
Issues = "https://github.com/kangho-Noh/works-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
